--- a/style.css
+++ b/style.css
@@ -41,6 +41,11 @@ body {
   font-weight: 700;
 }
 
+.btn-1:hover {
+  color: hsl(208, 11%, 55%);
+  cursor: pointer;
+}
+
 .hero-content {
   display: grid;
   grid-template-columns: auto auto;
@@ -69,6 +74,11 @@ h1 {
   color: hsl(193, 100%, 96%);
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.09);
   font-weight: 700;
+}
+
+.btn-2:hover {
+  background-color: hsla(322, 100%, 66%, 75%);
+  cursor: pointer;
 }
 
 .mockups-img {
@@ -129,8 +139,6 @@ h2 {
   justify-self: start;
 }
 
-/* main section height 160 + (440 * 3) + (40 * 2) */
-
 .sub-section {
   background-image: linear-gradient(
     180deg,
@@ -170,6 +178,11 @@ h2 {
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.09);
 }
 
+.btn-3:hover {
+  background-color: hsla(322, 100%, 66%, 75%);
+  cursor: pointer;
+}
+
 .footer-section {
   padding: 50px 80px 60px 80px;
   background-color: hsl(192, 100%, 9%);
@@ -183,52 +196,61 @@ h2 {
 
 .footer-content {
   display: grid;
-  column-gap: 30px;
+  column-gap: 100px;
   row-gap: 15px;
   grid-template-rows: repeat(5, auto);
-  grid-template-columns: 25px 2.5fr 1fr 1fr 2.5fr;
+  grid-template-columns: 3fr 1fr 1fr 300px;
   grid-template-areas:
-    "loc-icon loc abt ca ics"
-    "loc-icon loc wwd bl ics"
-    "ph-icon ph wwd bl ics"
-    "em-icon em wwd bl ics"
-    "em-icon em wwd bl co-ri";
+    "loc abt ca ics"
+    "loc wwd bl ics"
+    "ph wwd bl ics"
+    "em wwd bl ics"
+    "em wwd bl co-ri";
   color: #f7f7f7;
 }
 
-.footer-content > p {
+.footer-content p {
   margin: 0px;
+  width: fit-content;
 }
 
-.location-icon {
-  grid-area: loc-icon;
-  grid-row: 1 / 2;
-  grid-column: 1 / 2;
+.footer-content p:hover {
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 .location {
   grid-area: loc;
   grid-row: 1 / 3;
-  grid-column: 2 / 3;
+  grid-column: 1 / 2;
   align-self: flex-start;
+
+  display: flex;
+  gap: 20px;
+}
+
+.location-icon {
+  width: 13px;
+  height: 18px;
+  margin-top: 5px;
 }
 
 .about-us {
   grid-area: abt;
   grid-row: 1 / 2;
-  grid-column: 3 / 4;
+  grid-column: 2 / 3;
 }
 
 .career {
   grid-area: ca;
   grid-row: 1 / 2;
-  grid-column: 4 / 5;
+  grid-column: 3 / 4;
 }
 
 .icons {
   grid-area: ics;
   grid-row: 1 / 2;
-  grid-column: 5 / 6;
+  grid-column: 4 / 5;
 
   display: flex;
   gap: 10px;
@@ -236,8 +258,8 @@ h2 {
 }
 
 .icon {
-  width: 24px;
-  height: 24px;
+  width: 32px;
+  height: 32px;
   border: 1px solid red;
   border-radius: 50%;
   display: flex;
@@ -248,52 +270,64 @@ h2 {
     brightness(116%) contrast(91%);
 }
 
+.icon:hover {
+  filter: invert(57%) sepia(71%) saturate(3726%) hue-rotate(295deg)
+    brightness(101%) contrast(106%);
+  cursor: pointer;
+}
+
 .what-we-do {
   grid-area: wwd;
   grid-row: 2 / 3;
-  grid-column: 3 / 4;
+  grid-column: 2 / 3;
 }
 
 .blog {
   grid-area: bl;
   grid-row: 2 / 3;
-  grid-column: 4 / 5;
-}
-
-.phone-icon {
-  grid-area: ph-icon;
-  grid-row: 3 / 4;
-  grid-column: 1 / 2;
+  grid-column: 3 / 4;
 }
 
 .phone-no {
   grid-area: ph-no;
   grid-row: 3 / 4;
-  grid-column: 2 / 3;
+  grid-column: 1 / 2;
+
+  display: flex;
+  gap: 20px;
+}
+
+.phone-icon {
+  width: 18px;
+  height: 18px;
+  align-self: center;
 }
 
 .faq {
   grid-area: fq;
   grid-row: 3 / 4;
-  grid-column: 3 / 4;
+  grid-column: 2 / 3;
 }
 
 .contact-us {
   grid-area: con-us;
   grid-row: 3 / 4;
-  grid-column: 4 / 5;
-}
-
-.email-icon {
-  grid-area: em-icon;
-  grid-row: 4 / 5;
-  grid-column: 1 / 2;
+  grid-column: 3 / 4;
 }
 
 .email {
   grid-area: em;
   grid-row: 4 / 5;
-  grid-column: 2 / 3;
+  grid-column: 1 / 2;
+
+  display: flex;
+  gap: 20px;
+}
+
+.email-icon {
+  width: 20px;
+  height: 16px;
+  align-self: center;
 }
 
 .copyright {
@@ -304,6 +338,7 @@ h2 {
   font-size: 14px;
 }
 
-/* footer section height 465px */
-
-/* TODO: Need to add font-family, font-size, font-weight, colors */
+.footer-content > .copyright:hover {
+  text-decoration: none;
+  cursor: default;
+}
