--- a/style.css
+++ b/style.css
@@ -342,3 +342,161 @@ h2 {
   text-decoration: none;
   cursor: default;
 }
+
+@media (max-width: 750px) {
+  .hero-section {
+    height: 1000px;
+  }
+
+  .hero-content {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto;
+    text-align: center;
+  }
+
+  .hero-texts {
+    align-items: center;
+    gap: 20px;
+  }
+
+  .mockups-img {
+    width: 600px;
+  }
+
+  .main-section {
+    height: 3445px;
+    gap: 80px;
+  }
+
+  .card {
+    width: 510px;
+    /* height: 895px; */
+    height: 765px;
+    padding: 40px;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto;
+  }
+
+  .card-2 {
+    grid-template-areas:
+      "i2"
+      "t2";
+  }
+
+  .illustration,
+  .illustration-2 {
+    grid-row: 1 / 2;
+    width: 500px;
+    justify-self: center;
+  }
+
+  .main-texts {
+    height: 300px;
+    justify-self: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: end;
+  }
+
+  .text {
+    width: 400px;
+    text-align: center;
+    line-height: 36px;
+  }
+
+  .card-4 {
+    width: 600px;
+  }
+
+  .footer-section {
+    padding: 50px 25px 60px 25px;
+  }
+
+  .footer-content {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(13, auto);
+    grid-template-areas:
+      "loc"
+      "ph"
+      "em"
+      "abt"
+      "abt"
+      "wwd"
+      "faq"
+      "ca"
+      "bl"
+      "con-us"
+      "con-us"
+      "ics"
+      "co-ri";
+  }
+
+  .location {
+    grid-area: loc;
+    grid-row: 1 / 2;
+    grid-column: 1 / 2;
+  }
+
+  .phone-no {
+    grid-area: ph;
+    grid-row: 2 / 3;
+    grid-column: 1 / 2;
+  }
+
+  .email {
+    grid-area: em;
+    grid-row: 3 / 4;
+    grid-column: 1 / 2;
+  }
+
+  .about-us {
+    grid-area: abt;
+    grid-row: 5 / 6;
+    grid-column: 1 / 2;
+  }
+
+  .what-we-do {
+    grid-area: wwd;
+    grid-row: 6 / 7;
+    grid-column: 1 / 2;
+  }
+
+  .faq {
+    grid-area: faq;
+    grid-row: 7 / 8;
+    grid-column: 1 / 2;
+  }
+
+  .career {
+    grid-area: ca;
+    grid-row: 8 / 9;
+    grid-column: 1 / 2;
+  }
+
+  .blog {
+    grid-area: bl;
+    grid-row: 9 / 10;
+    grid-column: 1 / 2;
+  }
+
+  .contact-us {
+    grid-area: co-us;
+    grid-row: 10 / 11;
+    grid-column: 1 / 2;
+  }
+
+  .icons {
+    grid-area: ics;
+    grid-row: 12 / 13;
+    grid-column: 1 / 2;
+    justify-self: center;
+  }
+
+  .copyright {
+    grid-area: co-ri;
+    grid-row: 13 / 14;
+    grid-column: 1 / 2;
+    justify-self: center;
+  }
+}
